--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
     <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John otieno</title>
-
-    </head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>The Church Website</title>
+</head>
     <body>
         <header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">john's website</a>
-        </nav>
+            <h1>Welcome to The Church Website</h1>
+            <p>The church of<strong> [Your Church Name] </strong> is a place of worship and community</p>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/arequipa-peru/400x250/4-48661c257177c19a0f39a3991b1a7e7aa0338487.jpeg" alt="Church Image" width="400" height="250" />
+            <nav>
+                <ul>
+                    <li><a href="#mission">Mission</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#involved">Get Involved</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
-            <h1>Welcome to John Otieno's Homepage</h1>
-            <img src="john.jpg" alt="John Otieno" width="200" height="200">
-            <p>Hello! I'm John Otieno, a web developer and designer.</p>
+            <section id="mission">
+                <h2>Our Mission</h2>
+                <p>To provide a welcoming environment for worship, spiritual growth, and community service.</p>
 
+            <section id="services">
+                <h2>Our Services</h2>
+                <p>We offer a variety of services including weekly worship, prayer meetings, and community outreach programs.</p>
+            </section>
+
+            <section id="involved">
+                <h2>Get Involved</h2>
+                <p>Join us in our mission by participating in our events and programs.</p>
+            </section>
+
+            <section id="contact">
+                <h2>Contact Us</h2>
+                <p>If you have any questions, feel free to reach out to us.</p>
+            </section>
         </main>
+        <aside>
+            <h2>Upcoming Events</h2>
+            <ol>
+                <li>Weekly Prayer Meeting - Every Wednesday at 7 PM</li>
+                <li>Community Service Day - March 15, 2023</li>
+                <li>New Member Orientation - March 22, 2023</li>
+            </ol>
+        </aside>
         <footer>
-            <p>&copy; 2024 John Otieno</p>
+            <p>&copy; 2023 [Your Church Name]. All rights reserved.</p>
         </footer>
     </body>
-</html>
+        
